--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,7 @@
         font-awesome. (n.d.). Cloudflare. https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css-->
     <title>BRICKS LEGO</title>
     <!-- <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js" async defer></script> auth0--> 
-    <!-- <script src="staticHomeScreen.mjs" type = "module"></script> -->
-    <script src="app.js" type = "module"></script>
+    <script src="index.js" type = "module"></script>
 
 </head>
 <body>
