changes to server

--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,9 @@
         Reference:
         font-awesome. (n.d.). Cloudflare. https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css-->
     <title>BRICKS LEGO</title>
-    <!-- <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js" async defer></script> auth0--> 
+    <!-- Referenced from auth0 library from CDN.  -->
+    <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js" async defer></script>
     <script src="index.js" type = "module"></script>
-
 </head>
 <body>
     <div class = "grid">
