got rid of some things like my junk folder where i keep progress and some codes i got rid of in case i'll need in the future

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,30 @@
 <body>
     <div class = "grid">
         <header></header>
-        <main id = "tempMain"></main>
+        <main id = "tempMain">
+            <div class = "pages">
+                <div class = "page active" data-set = "1">
+                    <h2>HOME</h2>
+                    <p>WELCOME HOME</p>
+                    <p>WELCOME HOME</p>
+                    <p>WELCOME HOME</p>
+                </div>
+                <div class = "page" data-set = "2">
+                    <h2>BRICKS</h2>
+                    <p>WELCOME BRICKS</p>
+                </div>
+                <div class = "page" data-set = "3">
+                    <h2>KITS</h2>
+                    <p>WELCOME KITS</p>
+                </div>
+                <div class = "page" data-set = "4">
+                    <h2>DESIGN KIT</h2>
+                    <p>WELCOME DESIGN</p>
+                    <p>WELCOME DESIGN</p>
+                    <p>WELCOME DESIGN</p>
+                </div>
+            </div>
+        </main>
         <footer></footer>
     </div>
 </body>
