progress on server side

--- a/client/index.html
+++ b/client/index.html
@@ -21,8 +21,8 @@
                 <div class = "page active" data-set = "1">
                     <h2>HOME</h2>
                     <p>WELCOME HOME</p>
-                    <p>WELCOME HOME</p>
-                    <p>WELCOME HOME</p>
+                    <!-- <p>WELCOME HOME</p>
+                    <p>WELCOME HOME</p> -->
                 </div>
                 <div class = "page" data-set = "2">
                     <h2>BRICKS</h2>
@@ -35,8 +35,8 @@
                 <div class = "page" data-set = "4">
                     <h2>DESIGN KIT</h2>
                     <p>WELCOME DESIGN</p>
-                    <p>WELCOME DESIGN</p>
-                    <p>WELCOME DESIGN</p>
+                    <!-- <p>WELCOME DESIGN</p>
+                    <p>WELCOME DESIGN</p> -->
                 </div>
             </div>
         </main>
