--- a/client/tempTrial.html
+++ b/client/tempTrial.html
@@ -30,3 +30,12 @@
         main.appendChild(cloned);
     });
 </script>
+
+<!-- Select your favorite sports: -->
+<!-- <select id="myList">
+   <option>Soccer</option>
+   <option>Volley</option>
+   <option>Cricket</option>
+   <option>F1</option>
+   <option>Basketball</option>
+</select> -->
