--- a/client/wishlist.html
+++ b/client/wishlist.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href= "404.css">
-    <title>Error Page :(</title>
+    <title>Wishlist</title>
 </head>
 <body>
-    <main>
-        <h1>Error Page :(</h1>
-        <p>If you are lost visit <a href="/">the Home Page</a></p>
-    </main>
+    <h1>Wishlist</h1>
 </body>
 </html>
