started working on search

--- a/client/bricks.html
+++ b/client/bricks.html
@@ -7,16 +7,13 @@
     <link rel="stylesheet" href= "style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js" async defer></script>
-    <script src="../js/bricks.js" type = "module"></script>
+    <script src="../js/bricksIndex.js" type = "module"></script>
     <title>Kit Design</title>
 </head>
 <body>
     <div class = "grid">
         <header></header>
-        <main id = "tempMain">
-            <!-- <h1>Kit Design</h1>
-            <h1>Kit Design</h1> -->
-        </main>
+        <main id = "tempMain" class="bricksPage"></main>
         <footer></footer>
     </div>
 </body>
