--- a/client/brickInfo.html
+++ b/client/brickInfo.html
@@ -7,17 +7,13 @@
     <link rel="stylesheet" href= "style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js" async defer></script>
-    <script src="../js/wishListIndex.js" type = "module"></script>
+    <script src="../js/brickInfo.js" type = "module"></script>
     <title>Kit Design</title>
 </head>
 <body>
     <div class = "grid">
         <header></header>
         <main id = "designPage">
-            <h1>Wishlist</h1>
-            <h1>Wishlist</h1>
-            <h1>Wishlist</h1>
-            <h1>Wishlist</h1>
         </main>
         <footer></footer>
     </div>
