--- a/client/brick.html
+++ b/client/brick.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href= "style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js" async defer></script>
-    <script src="../js/designKit.js" type = "module"></script>
+    <script src="../js/individualBrick.js" type = "module"></script>
     <title>Kit Design</title>
 </head>
 <body>
     <div class = "grid">
         <header></header>
         <main id = "designPage">
-            <h1>Kit Design</h1>
-            <h1>Kit Design</h1>
+            <img id = "brickIn"></img>
+            <div id = "pricing"></div>
         </main>
         <footer></footer>
     </div>
