--- a/client/404Error.html
+++ b/client/404Error.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href= "404.css">
+    <link rel="stylesheet" href= "style.css">
     <title>Error Page :(</title>
 </head>
-<body>
+<body id="error">
     <main>
         <h1>Error Page :(</h1>
-        <p>If you are lost visit <a href="/">the Home Page</a></p>
+        <p>If you are lost visit <a id="errorLink" href="/">the Home Page</a></p>
     </main>
 </body>
 </html>
