--- a/client/cart.html
+++ b/client/cart.html
@@ -26,6 +26,7 @@
                 <div class = "total"></div>
             </form>
             <input class = "continueToCheckout" type=button value='Checkout'>
+            <div class = "message">Hello valued customer we have not provided the luxury to checkout as a guest, please log in to checkout. Thank you.</div>
         </main>
         <footer></footer>
     </div>
