--- a/client/designKit.html
+++ b/client/designKit.html
@@ -14,8 +14,10 @@
     <div class = "grid">
         <header></header>
         <main id = "designPage">
-            <h1>designKit</h1>
-            <h1>designKit</h1>
+            <h1 id="design">designKit</h1>
+            <input id=message type=text autofocus autocomplete=off placeholder='Add a message here…'>
+            <label id=avatar>Avatar: <input id=avatarfile type=file accept="image/png, image/jpeg"></label>
+            <input id=send type=submit value=Send>
         </main>
         <footer></footer>
     </div>
