--- a/client/success.html
+++ b/client/success.html
@@ -1,7 +1,18 @@
-<h1>PAYMENT SUCCESSFUL</h1>
-<h1>PAYMENT SUCCESSFUL</h1>
-<h1>PAYMENT SUCCESSFUL</h1>
-<h1>PAYMENT SUCCESSFUL</h1>
-<h1>PAYMENT SUCCESSFUL</h1>
-<h1>PAYMENT SUCCESSFUL</h1>
-<h1>PAYMENT SUCCESSFUL</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href= "style.css">
+    <title>checkout</title>
+</head>
+<body id="successPage">
+    <main id="successful">
+        <h1>PAYMENT SUCCESSFUL<span id="tick">√</span></h1>
+        <h2>Your order will be shipped in less than 5 working days.</h2>
+        <h2>Having issues with your order? Contact us at <a href="port.ac.uk">legoshop@myport.ac.uk</a></h2>
+        <h2>View more items and new releases at <a href="/">Home Page</a></h2>
+    </main>
+</body>
+</html>
