readme, uploading img src sorted, server changed abit using try and catch

--- a/client/cart.html
+++ b/client/cart.html
@@ -25,6 +25,7 @@
                 <div class = "legoBasket"></div>
                 <div class = "total"></div>
                 <input class = "continueToCheckout" type=button value='Checkout'>
+                <input class = "clearBasket" type=button value='clear basket'>
             </form>
         </main>
         <footer></footer>
