--- a/client/cart.html
+++ b/client/cart.html
@@ -23,6 +23,7 @@
                     <div>Subtotal</div>
                 </div>
                 <div class = "legoBasket"></div>
+                <div class = "emptyMessage"></div>
                 <div class = "total"></div>
                 <input class = "continueToCheckout" type=button value='Checkout'>
                 <input class = "clearBasket" type=button value='clear basket'>
