--- a/client/kit.html
+++ b/client/kit.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js" async defer></script>
     <script src="../js/individualKit.js" type = "module"></script>
-    <title>Kit Design</title>
+    <title>Kit</title>
 </head>
 <body>
     <div class = "grid">
