--- a/client/brick.html
+++ b/client/brick.html
@@ -21,6 +21,7 @@
             <div class= "category"></div>
             <button class = "addToCart">Add to Cart</button>
             <button class = "fas fa-heart addToWishList">Add to Wishlist</button>
+            <div class = "emptyCart"></div>
         </main>
         <footer></footer>
     </div>
