--- a/client/wishlist.html
+++ b/client/wishlist.html
@@ -18,14 +18,13 @@
             <form class = 'form'>
                 <div class = "cartStyle">
                     <div class = "legoInCart">Lego</div>
-                    <div>Qty</div>
+                    <div>Stock</div>
                     <div>Price</div>
-                    <div>Subtotal</div>
                 </div>
                 <div class = "legoBasket"></div>
                 <div class = "emptyMessage"></div>
                 <div class = "total"></div>
-                <input class = "clearBasket" type=button value='clear wishList'>
+                <input class = "clearWishlist" type=button value='clear wishList'>
             </form>
         </main>
         <footer></footer>
